<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".ContactsFragment"
>
    <Button
        android:id="@+id/contact_vk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingVertical="20dp"
        android:background="#4a76a8"
        android:textColor="#fff"
        android:onClick="onClick"
        android:tag="@string/contact_vk_link"
        android:text="@string/contact_vk_title"
    />
    <Button
        android:id="@+id/contact_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingVertical="20dp"
        android:background="#24292e"
        android:textColor="#fff"
        android:onClick="onClick"
        android:tag="@string/contact_github_link"
        android:text="@string/contact_github_title"
    />
    <Button
        android:id="@+id/contact_habr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingVertical="20dp"
        android:background="#7aa1bd"
        android:textColor="#fff"
        android:onClick="onClick"
        android:tag="@string/contact_habr_link"
        android:text="@string/contact_habr_title"
    />
    <Button
        android:id="@+id/contact_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingVertical="20dp"
        android:background="#ffdb4d"
        android:textColor="#000"
        android:onClick="onClick"
        android:tag="@string/contact_email_link"
        android:text="@string/contact_email_title"
    />
</LinearLayout>
