<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="@string/nav_about"
        />
        <item
            android:id="@+id/nav_free_time"
            android:icon="@drawable/free_time_icon"
            android:title="@string/nav_free_time"
        />
        <item
            android:id="@+id/nav_dissertation"
            android:icon="@drawable/dissertation_icon"
            android:title="@string/nav_dissertation"
        />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/plans_icon"
            android:title="@string/nav_plans"
        />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contacts_icon"
            android:title="@string/nav_contacts"
        />
    </group>
</menu>
