<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
    >
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/photo"
            android:contentDescription="@string/about_photo_description"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="35dp"
            android:textSize="18sp"
            android:text="@string/main_text"
        />
    </LinearLayout>
</ScrollView>
